# GraphicDemo

./: .gitignore  README.md  project.py
DevUb/: readme.txt
DevUb/app/: CMakeLists.txt
DevUb/app/shaders/: pointVert.glsl  singleColor.glsl  trajVert.glsl  worldVert.glsl
DevUb/app/src/: Application.cpp  Application.hpp  ArgParser.cpp  ArgParser.hpp  AsyncSimulImpl.cpp  AsyncSimulImpl.hpp  GLDraw.hpp  Logger.cpp  Logger.hpp  ModelLoader.cpp  ModelLoader.hpp  Simulation.cpp  Simulation.hpp  glUtils.cpp  glUtils.hpp  main.cpp
DevUb/physics/: CMakeLists.txt
DevUb/physics/include/: EarthPhysic.hpp  Physics.hpp  PhysicsModel.hpp
DevUb/physics/src/: EarthPhysics.cpp
apps/: CMakeLists.txt
apps/demo/: CMakeLists.txt
apps/demo/data/shaders/: frag.glsl  vert.glsl
apps/demo/shaders/: frag.glsl  frag_1.glsl  frag_2.glsl  vert.glsl
apps/demo/src/: DemoApp.cpp  DemoApp.hpp  main.cpp
apps/lighting/: CMakeLists.txt
apps/lighting/data/shaders/: cubeFrag.glsl  cubeVert.glsl  lightFrag.glsl  lightVert.glsl
apps/lighting/src/: CameraController.hpp  Cube.cpp  Cube.hpp  CubeWithMaterials.cpp  CubeWithMaterials.hpp  Drawable.hpp  GraphicsItem.hpp  GraphicsScene.cpp  GraphicsScene.hpp  IOCameraController.cpp  IOCameraController.hpp  InputController.cpp  InputController.hpp  Light.cpp  Light.hpp  LightCube.cpp  LightCube.hpp  LightPoint.cpp  LightPoint.hpp  LightingApp.cpp  LightingApp.hpp  Scene.cpp  Scene.hpp  SceneCamera.cpp  SceneCamera.hpp  SceneElement.hpp  TargetCube.cpp  TargetCube.hpp  main.cpp
config/cmakes/: dirs.cmake  opengl.cmake  projects.cmake
config/projects/: CoreLib.json  DemoApp.json  FreeGLUT.json  GLEW.json  GLFW.json  LightingApp.json  demo.json
config/toolchains/: toolchain.json
libs/: CMakeLists.txt
libs/core/: CMakeLists.txt
libs/core/include/core/: Application.cpp  Application.hpp  CMDArguments.hpp  Camera.hpp  DEFS.hpp  FlyCamera.hpp  GLEWManager.hpp  GLFWDataHandler.hpp  GLFWSurface.hpp  GLManager.hpp  GlutSurface.hpp  IOEvent.hpp  Image.hpp  KeyboardEvent.hpp  MouseEvent.hpp  OpenGLApplication.hpp  Resouce.hpp  ResouceManager.hpp  Surface.hpp  SurfaceDefs.hpp  VisualApplication.hpp
libs/core/include/graphics/: Drawable.hpp  Math3D.hpp  Scene3D.hpp  SceneCamera.hpp  SceneElement.hpp  SceneFlyCamera.hpp  SceneLight.hpp
libs/core/include/openGL/: Drawable.hpp  GLutils.hpp  OpenGLObject.hpp  Shader.hpp  ShaderProgram.hpp  Texture.hpp  Texture2d.hpp  VAOObject.hpp  VAOPipeline.hpp  VertexBuffer.hpp  openGL.hpp
libs/core/include/src/: OpenGLObject.cpp
libs/core/src/: Application.cpp  Application.hpp  CMDArguments.cpp  FlyCamera.cpp  GLEWManager.cpp  GLFWDataHandler.cpp  GLFWSurface.cpp  GLManager.cpp  GLutils.cpp  GlutSurface.cpp  Image.cpp  Math3D.cpp  MouseEvent.cpp  OpenGLApplication.cpp  OpenGLObject.cpp  ResouceManager.cpp  Resource.cpp  Scene3D.cpp  SceneElement.cpp  SceneFlyCamera.cpp  SceneLight.cpp  Shader.cpp  ShaderProgram.cpp  Surface.cpp  Texture.cpp  Texture2d.cpp  VAOObject.cpp  VAOPipeline.cpp  VertexBuffer.cpp  VisualApplication.cpp
scripts/: cmake.py  compile.py  initter.py  loader.py  logger.py  proj.py  proj_dev.py  runner.py  utils.py
scripts/tests/: testInitter.py
